hphp/hack/test/typecheck/coeffect_encapsulation/ctx_const_access.php.exp
File "ctx_const_access.php", line 8, characters 3-6:
This call is not allowed because its capabilities are incompatible with the context (Typing[4390])
  File "ctx_const_access.php", line 4, characters 20-30:
  From this declaration, the context of this function body provides the capability WriteProperty
  File "pseudofunctions.hhi", line 44, characters 12-15:
  But the function being called requires the capability IO
