hphp/hack/test/typecheck/coeffect_encapsulation/ctx_const_access.php
<?hh

class Foo {
  const ctx Bar = [write_props];
}

function main()[Foo::Bar]: void {
  echo "fail"; // error
}
